--- a/spring-backend-demo/src/main/resources/application.properties
+++ b/spring-backend-demo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://db:5432:postgres
+spring.datasource.url = jdbc:postgresql://employee-db:5432:postgres
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 
